# tic-tak-toe-2

./: .coverage  .editorconfig  .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE.md  SECURITY.md  conda-linux-64.lock.txt  conda-lock.yml  conda-osx-64.lock.txt  conda-osx-arm64.lock.txt  conda-win-64.lock.txt  coverage.xml  environment.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements-lock.txt  requirements.txt  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  codeql.yml  release-snapshot.yml  release.yml
.hypothesis/constants/: 03dd49ece13e2484  05383f842d79cc4d  0f6193ee0583e5e8  16115b34164af4d0  1fa2ce0325fad685  39ea3b48852fa538  61d08a1ae234c1b7  6a8cd9e0e290dfcd  72321e7c9d48b2ef  8d12111e6bc85717  960b0514fa84b8cb  a862fa88985096eb  b00341b89ce7e754  b164c79ac3c0d398  bfd4aba8a38f2ee4  c7ab38e39497f810  e4aa13531bc039cb  f369f2debe7ca3c0
archive/: 01_generate_game_states_enhanced.py
archive/ttt/: baselines.py  datasets.py  game_basics.py  supervision.py  symmetry.py
docs/: ablations.md  benchmarks.md  cli.md  data_card.md  datasets.md  experiments.md  index.md  repro.md  results.md  theory.md
docs/api/: tictactoe.md
notebooks/: dataset_analysis.ipynb  solver_tactics_walkthrough.ipynb
scripts/: aggregate_results.py  recompute_baselines.py  run_benchmarks.py  run_benchmarks_ci.py  run_experiments.py  verify_export.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/ablations/: index.html
site/api/tictactoe/: index.html
site/benchmarks/: index.html
site/cli/: index.html
site/data_card/: index.html
site/datasets/: index.html
site/experiments/: index.html
site/repro/: index.html
site/search/: search_index.json
site/theory/: index.html
src/: 01_game_basics.py  01_generate_game_states_enhanced.py  02_symmetry_and_canonicalization.py  03_minimax_perfect_play.py  04_tactics_and_patterns.py  05_features_positional_control.py  06_policy_targets_and_margins.py  07_datasets_export.py  08_pairwise_and_symmetry_supervision.py  08_supervision_and_pairs.py  09_random_and_epsilon_baselines.py  09_trajectories_generation.py  10_cli.py
src/tictactoe/: __init__.py  cli.py  datasets.py  features.py  game_basics.py  orchestrator.py  paths.py  policy.py  solver.py  symmetry.py  tactics.py  tracking.py
src/ttt/: __init__.py  datasets.py  feature_orchestrator.py  features_positional.py  policy_targets.py  tactics.py  trajectories.py
tests/: README.md  conftest.py  test_augmentation_count.py  test_benchmarks.py  test_export_smoke.py  test_invariance.py  test_new_invariants.py  test_orchestrator_features_extended.py  test_orchestrator_flags.py  test_parquet_semantics.py  test_paths_fallback.py  test_policy_and_dataset_invariants.py  test_policy_invariants.py  test_policy_props.py  test_policy_props_mod.py  test_property_based.py  test_repro_and_cli.py  test_solver.py  test_solver_invariants.py  test_solver_known_positions.py  test_solver_mod.py  test_symmetry.py  test_symmetry_compose.py  test_symmetry_invariance.py  test_symmetry_mod.py
tests/data/: baselines.json
