[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "tictactoe"
version = "1.1.0"
description = "Tic-tac-toe algorithms, datasets, and CLI"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "romgenie" }
]
dependencies = [
  "numpy>=1.26,<3.0",
]

license = { text = "MIT" }
keywords = ["tic-tac-toe", "minimax", "game theory", "datasets", "reinforcement learning", "symmetry"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Intended Audience :: Science/Research",
]

[project.optional-dependencies]
parquet = [
  "pandas==2.1.4",
  "pyarrow==14.0.2",
]
dev = [
  "pytest==7.4.4",
  "hypothesis==6.137.1",
  "pytest-benchmark==4.0.0",
  "black==24.8.0",
  "ruff==0.6.9",
  "mypy==1.11.2",
  "tox==4.18.0",
  "pytest-cov==5.0.0",
  "mkdocs==1.6.0",
  "mkdocstrings[python]==0.25.2",
  "mkdocs-material==9.5.31",
  "mkdocs-autorefs<1.0.0",
]
snapshot = [
  "numpy==1.26.4",
  "pandas==2.1.4",
  "pyarrow==14.0.2",
]

[project.urls]
Homepage = "https://github.com/romgenie/tic-tak-toe-2"
Documentation = "https://romgenie.github.io/tic-tak-toe-2/"
Issues = "https://github.com/romgenie/tic-tak-toe-2/issues"
Changelog = "https://github.com/romgenie/tic-tak-toe-2/blob/main/CHANGELOG.md"

[project.scripts]
ttt = "tictactoe.cli:main"

[tool.pytest.ini_options]
testpaths = [
  "tests"
]
addopts = "-q"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I"]
ignore = []

[tool.mypy]
python_version = "3.11"
[tool.hatch.build]
include = [
  "src/tictactoe/py.typed",
]
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
